--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         go-version: 1.16
 
-    - name: Check
-      run: make check
+    - name: Check lab1
+      run: make check lab1
 
